# qt-tge

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Qt-TGE  QtTGE_test_editor_dynamic_graph  QtTGE_test_graph_structure  QtTGE_test_player_intermediate_path  QtTGE_test_player_runtime  QtTGE_tests  REFACTORING_COORDINATES.md  TODO.txt
Qt-TGE_autogen/: mocs_compilation.cpp
Qt-TGE_autogen/UVLADIE3JM/: moc_graphwidget.cpp.d  moc_mainwindow.cpp.d
Testing/Temporary/: CTestCostData.txt
docs/: QT-TGE-formula-translation.md  Qt-TGE-design.md  references.md
docs/VanilaTGE/: edge_transition_requirements.md  operation.doc  readme.rtf  readme.txt
src/: edgedialog.h  edgelistitemwidget.h  graphmodel.cpp  graphmodel.h  graphwidget.cpp  graphwidget.h  graphwidget_helpers.cpp  graphwidget_helpers.h  gui_model.cpp  gui_model.h  locationdialog.cpp  locationdialog.h  main.cpp  mainwindow.cpp  mainwindow.h
src/tge/: domain.h
src/tge/demo/: signal_heist.cpp  signal_heist.h
src/tge/editor/: types.h
src/tge/editor/runtime/: manager.cpp  manager.h
src/tge/formula/: parser.cpp  parser.h  translation.cpp  translation.h  translation_types.h  translator.cpp  translator.h
src/tge/formula_translation/: formula_translation.cpp  formula_translation.h  parser_arith.cpp  parser_arith.h  translator.cpp  translator.h
src/tge/player/: types.h
src/tge/player/runtime/: engine.h  gameinitializer.h
src/ui/: edgedialog.cpp  edgedialog.h  edgelistitemwidget.cpp  globalvariablesdialog.cpp  globalvariablesdialog.h  graphwidget.cpp  graphwidget.h  graphwidget_edges.cpp  graphwidget_edges.h  graphwidget_errors.cpp  graphwidget_errors.h  graphwidget_helpers.cpp  graphwidget_helpers.h  graphwidget_locations.cpp  graphwidget_locations.h  gui_model.cpp  gui_model.h  infodisplayitemsdialog.cpp  infodisplayitemsdialog.h  locationdialog.cpp  locationdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerwidget.cpp  playerwidget.h
tests/: test_dummy.cpp  test_editor_dynamic_graph.cpp  test_editor_loop_edges.cpp  test_formula_translation.cpp  test_graph_structure.cpp  test_player_intermediate_path.cpp  test_player_runtime.cpp
